--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -9161,7 +9161,8 @@ html.ie.gecko body.modal-open {
 		-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, .09);
 		box-shadow: 0 2px 3px rgba(0, 0, 0, .09);
 		padding: 30px 30px 37px;
-		margin-top: 50px;
+		/* margin-top: 50px; */
+		margin-top: 100px;
 		margin-bottom: 50px
 	}
 }
